# cmake-examples

./: CMake.ppt  README.md
1-basic-project/: CMakeLists.txt
1-basic-project/src/: CMakeLists.txt  main.cpp
2-property-scopes/: CMakeLists.txt
2-property-scopes/lib/: CMakeLists.txt  child.cpp
2-property-scopes/src/: CMakeLists.txt
3-variable-scopes/: CMakeLists.txt
3-variable-scopes/sub/: CMakeLists.txt
4-producing-packages/: CMakeLists.txt
4-producing-packages/lib/: CMakeLists.txt  Config.cmake.in  include
5-consuming-packages/: CMakeLists.txt
5-consuming-packages/src/: CMakeLists.txt  main.cpp
6-fetchcontent/: CMakeLists.txt  main.cpp
src/libchild/: child.cpp
src/libchild/include/: child.hpp
src/parent/: main.cpp
src/standalone/: main.cpp
